@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-10T00:38:53Z",
-  "count" : 13,
-  "count_minmax" : [ 0, 13 ],
-  "count_prev_day_inc" : 6,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-23T16:10:22Z",
+  "count" : 8,
+  "count_minmax" : [ 8, 13 ],
+  "count_decinc" : [ -5, +0 ],
   "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
