@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-23T00:39:18Z",
+  "timestamp" : "2022-05-23T16:10:22Z",
   "count_outdated" : 1423,
   "uniques_outdated" : 76,
-  "count" : 1562,
+  "count" : 1557,
   "uniques" : 88,
   "views" : [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
+      "count": 8,
+      "count_minmax": [ 8, 13 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
