@@ -1,10 +1,10 @@
 {
-  "count": 139,
+  "count": 134,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 13,
+      "count": 8,
       "uniques": 1
     },
     {
